// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders correctly 1`] = `
<div
  className="sc-bdVaJa jdGJAZ"
>
  <ClearSkyDay />
</div>
`;

exports[`renders correctly when small prop is provided 1`] = `
<div
  className="sc-bdVaJa jmLRzy"
>
  <ClearSkyDay />
</div>
`;
